# matplotlib-window

./: .bumper.toml  .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: lint_test.yml  pypi_release.yml
example/: fixed_width_window.py
matplotlib_window/: base.py  window.py
tests/: conftest.py  helpers.py  test_base_helpers.py  test_base_objs.py  test_helpers.py  test_snapto.py
