[project]
name = "matplotlib-window"
version = "1.1.0"
description = "Draggable data windowing for matplotlib plots"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

requires-python = ">=3.11"
dependencies = [
    "matplotlib~=3.9",
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/matplotlib-window/blob/main/README.md"
Repository = "https://github.com/sco1/matplotlib-window.git"
Issues = "https://github.com/sco1/matplotlib-window/issues"
Changelog = "https://github.com/sco1/matplotlib-window/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "black~=25.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "flake8-define-class-attributes~=0.2",
    "isort~=7.0",
    "mypy~=1.11",
    "pre-commit~=4.0",
    "pytest~=9.0",
    "pytest-cov~=7.0",
    "pytest-randomly~=4.0",
    "ruff~=0.7",
    "sco1-bumper~=2.0",
    "tox~=4.18",
    "tox-uv~=1.11",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "matplotlib-window,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"
line_length = 100

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
enable_error_code = "exhaustive-match"
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.uv.build-backend]
module-name = "matplotlib_window"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
